--- a/style.css
+++ b/style.css
@@ -242,6 +242,10 @@ main h2 {
 .texteAuteur-right {
   flex: 1;
   text-align: justify;
+  h2,
+  h3 {
+    text-align: left;
+  }
 }
 @media (max-width: 800px) {
   .texteAuteur-left {
@@ -250,6 +254,10 @@ main h2 {
 }
 .texteAuteur-single {
   text-align: justify;
+  h2,
+  h3 {
+    text-align: left;
+  }
 }
 
 .copyright {
